[package]
name = "mitmproxy-windows-transparent-mode"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.9.0"
anyhow = "1.0"
windivert = "0.4.0"
lru_time_cache = "0.11.11"
netstat2 = "0.9.1"

[build-dependencies]
winres = "0.1.12"
