[package]
name = "mitmproxy-redirector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.9.0"
anyhow = "1.0"
windivert = "0.4.0"
lru_time_cache = "0.11.11"
netstat2 = "0.9.1"

[dev-dependencies]
hex = "0.4.3"
